# scrapy

./: .bandit.yml  .bumpversion.cfg  .coveragerc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .hgignore  .hgtags  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis-install.sh  .travis-workarounds.sh  .travis.yml  12. Integer to Roman.py  1scrape.py  2scrape.py  3349-Adjacent_Increasing_Subarrays_Detection_I.py  =1.14.3  AGENTS.md  AUTHORS  BUG_ANALYSIS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL  INSTALL.md  LICENSE  MANIFEST.in  MEMORY_LEAK_FIX_SUMMARY.md  Makefile  Makefile.buildbot  NEWS  News searcher from Times of india  PLUGGABLE_MAIL_SENDERS.md  (+70 more)
.github/: ISSUE_TEMPLATE.md  README.md  SUPPORT.md  issue_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: auto-close-llm-pr.yml  checks.yml  cifuzz.yml  deltatest.properties.json  deltatest.yaml  deltatest.yml  foo.yml  main.yml  pre-commit-comment.yml  publish.yml  pull-request.yml  stale.yml  tests-future.yml  tests-macos.yml  tests-new-macos.yml  tests-ubuntu.yml  tests-windows.yml  (+2 more)
.scrapy/: pip-selfcheck.json  pyvenv.cfg
.travis/: link-libxml2  requirements-latest.txt  requirements-lucid.txt  requirements-precise.txt  requirements-trunk.txt
README resources/: Example_Scraped_Data.csv
Test_Arian/: New Text Document.txt
Testa pusha/: Andrés hema.txt  Andrés.txt
Tutorials/: Scrapy_Tutorial.ipynb
adhoc_tool/: adhoc_cov_config.py  annotate.py  annotated_engine.py  strip_comments.py  test_annotated_engine.py  test_engine.py
artwork/: LICENSE  README  README.rst  scrapy-blog-logo.xcf
chech_500/: scrapy.cfg
conda.recipe/: meta.yaml
debian/: 000-default  changelog  control  copyright  pyversions  rules  scrapy-ctl.1  scrapy-service.default  scrapy-service.dirs  scrapy-service.install  scrapy-service.lintian-overrides  scrapy-service.postinst  scrapy-service.postrm  scrapy-service.prerm  scrapy-service.upstart  scrapy.1  scrapy.dirs  scrapy.docs  scrapy.install  scrapy.lintian-overrides  scrapy.manpages  scrapy.postinst  scrapy.postrm  scrapy.upstart  scrapyd.default  scrapyd.dirs  scrapyd.install  scrapyd.lintian-overrides  scrapyd.postinst  scrapyd.postrm  scrapyd.scrapyd.upstart  scrapyd.upstart  service_conf.py  watch
docs/: 1.3  Makefile  README  README.rst  README_BR.rst  api-stability.rst  async_contracts_support.md  conf.py  conftest.py  contents.rst  contributing.rst  deprecations.rst  experimental.rst  faq.rst  index.rst  license.rst  licenses.rst  local_development_setup.txt  news.rst  pip.txt  reference.rst  related-projects.rst  requirements.in  requirements.txt  trademarks.rst  versioning.rst
examples/: log_test.py
extras/: _scrapy_zsh_completion  build_release.sh  coverage-report.sh  delta_benchmark.py  fuzz_crawl.py  fuzz_headers.py  make_release.sh  makedeb.py  qps-bench-server.py  qpsclient.py  reactor_decorator.py  scrapy-ws.py  scrapy.1  scrapy.bat  scrapy.tac  scrapy_bash_completion  scrapy_zsh_completion  scrapyd.tac  sign_release.sh  test-scrapyd.sh
myproject/: output.csv  output.jl  output.json  output.xml  scrapy.cfg
ourproj/: scrapy.cfg
ourstuff/: headertest.py  iptest.py
packaging/: build.sh
project1/: scrapy.cfg
scrapy/: DBpediaAccess.py  VERSION  __init__.py  __main__.py  _classutilities.py  _monkeypatches.py  addons.py  aws.py  cmdline.py  command.py  conf.py  conftest.py  crawler.py  dupefilter.py  dupefilters.py  exceptions.py  exporters.py  exporters.py.bak  extension.py  fetcher.py  interfaces.py  item.py  itemchecker.py  link.py  linkextractor.py  log.py  logformatter.py  mail.py  mail.py~  mail_interfaces.py  mail_senders.py  middleware.py  middlewaremanager.py  mime.types  mimesniff.py  pqueues.py  project.py  queue.py  resolver.py  responsetypes.py  (+19 more)
scrapy-priority-scheduler/: README.md  setup.py
scrapyd/: __init__.py  app.py  config.py  default_scrapyd.cfg  default_scrapyd.conf  eggrunner.py  eggstorage.py  eggutils.py  environ.py  interfaces.py  launcher.py  poller.py  runner.py  scheduler.py  script.py  spiderqueue.py  sqlite.py  utils.py  webservice.py  website.py
script/: scrap2.py  scrape.py  scraped.py  scrapy1.py
scripts/: rpm-install.sh
sep/: README  README.rst  sep-001.rst  sep-001.trac  sep-002.rst  sep-002.trac  sep-003.rst  sep-003.trac  sep-004.rst  sep-004.trac  sep-005.rst  sep-005.trac  sep-006.rst  sep-006.trac  sep-007.rst  sep-007.trac  sep-008.rst  sep-008.trac  sep-009.rst  sep-009.trac  sep-010.rst  sep-010.trac  sep-011.rst  sep-011.trac  sep-012.rst  sep-012.trac  sep-013.rst  sep-013.trac  sep-014.rst  sep-014.trac  sep-015.rst  sep-015.trac  sep-016.rst  sep-016.trac  sep-017.rst  sep-017.trac  sep-018.rst  sep-018.trac  sep-019.rst  sep-020.rst  (+2 more)
tax_scraper/: README.md  __init__.py  __main__.py  api.py  settings.py
test_proxy_auth/: main.py  scrapy.cfg
tests/: __init__.py  aio_spiders.py  basic.py  constraints-py34.txt  constraints.txt  errback_crawl_successful.py  errback_during_crawling.py  errback_logging.py  ftpserver.py  ignores.txt  middlewares.py  mockproxy.py  mockserver.py  pipelines.py  pre-py36-ignores.txt  py3-ignores.txt  py3-win-ignores.txt  requirements-py2.txt  requirements-py3.txt  requirements-twisted-trunk.txt  requirements.txt  sitecustomize.py  spiders.py  testFailingSpider.py  testUnhandled.py  test_DBpediaAccess.py  test_addons.py  test_aws.py  test_brotlipy.py  test_checksettings.py  test_closespider.py  test_command_check.py  test_command_crawl.py  test_command_edit.py  test_command_fetch.py  test_command_genspider.py  test_command_parse.py  test_command_runspider.py  test_command_setting.py  test_command_shell.py  (+235 more)
tests_typing/: test_http_request.mypy-testing  test_http_response.mypy-testing  test_spiders.mypy-testing
tutorial/: dap_unified_scraper.py  excel_structure.txt  output.json  quotes-1.html  quotes-2.html  satkers_output.json  scrapy.cfg  streaming_browser_scraper.py  streaming_output.json  test_playwright.py
(+2276 files in other folders)
